tests/more_generics/__snapshots__/jsfmt.spec.js.snap
exports[`test poly.js 1`] = `
"var foo1 = function<T>(x:T):T { return x; }

function foo2<T,S>(x:T):S { return x; }

var foo3 = function <T>(x:T):T { return foo3(x); }

function foo4<T,S>(x:T):S { return foo4(x); }

var x = [];
function foo5<T>():Array<T> { return x; }
/*
 var a = foo5();
 a[0] = 0;
 var b = foo5();
 var y: string = b[0];
*/

var foo6 = function<R>(x:R):R { return foo1(x); }

function foo7<R>(x:R):R { return foo5(); }

function foo8<U>(x:U,y):U {
  var z = foo8(x,x);
  y();
  return x;
}
/*
 foo8(0,void 0);
*/
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1497
        fromString(\", \").join(path.map(print, \"params\")),
                         ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1497:26)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:340:16)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
